# ocp-addons

./: .gitignore  MANIFEST.in  Makefile  Makefile-local-macos  README.md  env.yml  environment-test.yml  environment.yml  fix_libs.py  main.cpp  pyproject.toml  setup.py  test.py
.github/actions/: build.yml
.github/actions/build-wheel/: action.yml
.github/actions/test-wheel/: action.yml
.github/workflows/: build-wheel-and-repair.yml  build-wheels.yml  release-wheels.yml
examples/: b.brep  b123.brep  b2.brep
src/: main.cpp  modules.cpp
src/serializer/: main.cpp  serializer.cpp  serializer.h
src/tessellator/: tessellate.cpp  tessellate.h  tessellator.cpp  tessellator.h  utils.cpp  utils.h
tests/: test_all.py
